--- a/S1Task2/main.css
+++ b/S1Task2/main.css
@@ -100,7 +100,7 @@ h4{
     background: white;
     padding: 30px 20px;
     margin: 20px;
-    box-shadow: 10px 10px 5px #909090;
+    border-style:none outset outset none;
 }
 
 .list_project{
