--- a/S1Task5/main.css
+++ b/S1Task5/main.css
@@ -20,7 +20,7 @@ button, input, select, textarea { font-size:100%; }
 table { border-collapse:collapse; border-spacing:0; }
 
 *{
-    font-family:"微软雅黑",sans-serif;
+    font-family:'微软雅黑',sans-serif;
 }
 
 
